--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Haiyun Wang</title>
 </head>
 <body>
-    <video autoplay muted loop class="concept" id='section1' class="snap" style = 'position:fixed; z-index:-1;'>
+    <video autoplay muted loop id='section1' class="snap video" style = 'position:fixed; z-index:-1;'>
         <source src="videos/videoBackground.mp4" type="video/mp4">
     </video> 
     <div class="snap aboutInfo" style="top:100vh;"id='section2'>
@@ -58,30 +58,32 @@
         </div>
     </div>
     <div class="snap project-container"style='1000vh;' id='section5'>
-        <div class="card">
-            <a href="https://redesignwebsite.netlify.app">
-                <img class="projectImg" src="./images/redesign.png" alt="redesign website">
-            </a>   
-            <div class="projectInfo-container">
-                <p class="projectInfo">
-                    The application established a dynamic
-                    search bar in vue.js, it implements dynamical data changing for
-                    updating search results synchronously.It also obtains data from wikipedia api to make entry points
-                    For these results. 
-                </p>
+        <div class="card-container">
+            <div class="card">
+                <a href="https://redesignwebsite.netlify.app">
+                    <img class="projectImg" src="./images/redesign.png" alt="redesign website">
+                </a>   
+                <div class="projectInfo-container">
+                    <p class="projectInfo">
+                        The application established a dynamic
+                        search bar in vue.js, it implements dynamical data changing for
+                        updating search results synchronously.It also obtains data from wikipedia api to make entry points
+                        For these results. 
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <a href="https://wikipedia-app.netlify.app">
-                <img class="projectImg" src="./images/wiki.png" alt="wikipedia-app">
-            </a>   
-            <div class="projectInfo-container">
-                <p class="projectInfo">
-                    The application established a dynamic
-                    search bar in vue.js, it implements dynamical data changing for
-                    updating search results synchronously.It also obtains data from wikipedia api to make entry points
-                    For these results.  
-                </p>
+            <div class="card">
+                <a href="https://wikipedia-app.netlify.app">
+                    <img class="projectImg" src="./images/wiki.png" alt="wikipedia-app">
+                </a>   
+                <div class="projectInfo-container">
+                    <p class="projectInfo">
+                        The application established a dynamic
+                        search bar in vue.js, it implements dynamical data changing for
+                        updating search results synchronously.It also obtains data from wikipedia api to make entry points
+                        For these results.  
+                    </p>
+                </div>
             </div>
         </div>
     </div>
