--- a/index.html
+++ b/index.html
@@ -7,43 +7,55 @@
     <title>Haiyun Wang</title>
 </head>
 <body>
-    <video autoplay muted loop id='section1' class="snap video" style = 'position:fixed; z-index:-1;'>
-        <source src="videos/videoBackground.mp4" type="video/mp4">
-    </video> 
+    <div class="home snap" id='section1'style = 'position:fixed; z-index:-1;' >
+        <div class="text">Haiyun Wang</div>
+        <video autoplay muted loop  class="snap video">
+            <source src="videos/videoBackground.mp4" type="video/mp4">
+        </video> 
+    </div>
     <div class="snap aboutInfo" style="top:100vh;"id='section2'>
-        <img class = 'photo'src="./images/Profilephoto.jpg" alt="profile photo">
-        <p class="introduction" style="opacity: 0;">
-            I'm Haiyun Wang, a self-taught developer coming from art background. I love making  interesting applications creatively and solving challenges during the process.
-            I'm currently looking for new opportunities. If you are interested, please contact me with this email.
-            <a class="mail" href="mailto:why7121@gmail.com">why7121@gmail.com</a>
-        </p>
+        <div class="details">
+            <img class = 'photo'src="./images/Profilephoto.jpg" alt="profile photo" id='profileImg'>
+            <pre class="introduction" style="opacity: 0;" id='intro'>
+                I'm Haiyun Wang,
+                A self-taught developer,
+                coming from art background. 
+                I love creating interesting applications.
+            </pre>
+        </div>
     </div>
     <div class="snap backgroundInfo" style="top:600vh;" id='section3'>
         <div class="timeline">
-            <div class="container left" style="top: 100px;">
+            <!-- <div class = container>
+                <div class="left">
+                    <p class="year">2017 - Melbourne</p>
+                </div>
+                <div class="right">
+                    <p class="info">La Trobe University, Bachelor of Arts</p>
+                </div>
+            </div>   
+            <div class = container>
+                <div class="left">
+                    <p class="year">2018 - Melbourne</p>
+                </div>
+                <div class="right">
+                    <p class="info">RMIT University, Master of Public Arts</p>
+                </div>
+            </div>    -->
+            <div class="container left">
+                <p class="year">2017 - Melbourne</p>
+            </div>
+            <div class="info-container right">
                 <div class="concept">
-                    <p class="year">2017</p>
+                    <p class="info">La Trobe University, Bachelor of Arts</p>
                 </div>
             </div>
-            <div class="info-container right" style="top:10px">
-                <div class="concept">
-                    <div class="info">
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="graduation-cap" class="GradIcon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path class="iconColor" fill="currentColor" d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"></path></svg>
-                        <p>La Trobe University, Melbourne - Bachelor of Arts </p>
-                    </div>
-                </div>
+            <div class="container left">
+                <p class="year">2018 - Melbourne</p>
             </div>
-            <div class="container left" style="top: 100px;">
+            <div class="info-container right">
                 <div class="concept">
-                    <p class="year">2018</p>
-                </div>
-            </div>
-            <div class="info-container right" style="top:10px">
-                <div class="concept">
-                    <div class="info">
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="graduation-cap" class="GradIcon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path class='iconColor' fill="currentColor" d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"></path></svg>
-                        <p>RMIT University, Melbourne - Master of Public Arts </p>
-                    </div>
+                     <p class="info">RMIT University, Master of Public Arts</p>
                 </div>
             </div>
         </div>
@@ -54,10 +66,9 @@
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="css3-alt" class="skillIcons" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path class = 'iconColor'fill="iconColor" d="M0 32l34.9 395.8L192 480l157.1-52.2L384 32H0zm313.1 80l-4.8 47.3L193 208.6l-.3.1h111.5l-12.8 146.6-98.2 28.7-98.8-29.2-6.4-73.9h48.9l3.2 38.3 52.6 13.3 54.7-15.4 3.7-61.6-166.3-.5v-.1l-.2.1-3.6-46.3L193.1 162l6.5-2.7H76.7L70.9 112h242.2z"></path></svg>
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="js-square" class="skillIcons" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="iconColor" fill="iconColor" d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM243.8 381.4c0 43.6-25.6 63.5-62.9 63.5-33.7 0-53.2-17.4-63.2-38.5l34.3-20.7c6.6 11.7 12.6 21.6 27.1 21.6 13.8 0 22.6-5.4 22.6-26.5V237.7h42.1v143.7zm99.6 63.5c-39.1 0-64.4-18.6-76.7-43l34.3-19.8c9 14.7 20.8 25.6 41.5 25.6 17.4 0 28.6-8.7 28.6-20.8 0-14.4-11.4-19.5-30.7-28l-10.5-4.5c-30.4-12.9-50.5-29.2-50.5-63.5 0-31.6 24.1-55.6 61.6-55.6 26.8 0 46 9.3 59.8 33.7L368 290c-7.2-12.9-15-18-27.1-18-12.3 0-20.1 7.8-20.1 18 0 12.6 7.8 17.7 25.9 25.6l10.5 4.5c35.8 15.3 55.9 31 55.9 66.2 0 37.8-29.8 58.6-69.7 58.6z"></path></svg>
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="vuejs" class="skillIcons" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="iconColor" fill="iconColor" d="M356.9 64.3H280l-56 88.6-48-88.6H0L224 448 448 64.3h-91.1zm-301.2 32h53.8L224 294.5 338.4 96.3h53.8L224 384.5 55.7 96.3z"></path></svg>
-            <span class="credit">Attention: All the svg icons come from <a href="https://fontawesome.com/">Fontawesome</a></span>
         </div>
     </div>
-    <div class="snap project-container"style='top:1100vh;' id='section5'>
+    <div class="snap project-container"style='top:1000vh;' id='section5'>
         <div class="card-container">
             <div class="card">
                 <a href="https://redesignwebsite.netlify.app">
@@ -65,14 +76,12 @@
                 </a>   
                 <div class="projectInfo-container">
                     <p class="projectInfo">
-                        The application established a dynamic
-                        search bar in vue.js, it implements dynamical data changing for
-                        updating search results synchronously.It also obtains data from wikipedia api to make entry points
-                        For these results. 
+                        Based on Youtube original design, I built this application  in 
+                        vanilla javascript, it manipulates different states of html elements.                        
                     </p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card2">
                 <a href="https://wikipedia-app.netlify.app">
                     <img class="projectImg" src="./images/wiki.png" alt="wikipedia-app">
                 </a>   
@@ -80,13 +89,32 @@
                     <p class="projectInfo">
                         The application established a dynamic
                         search bar in vue.js, it implements dynamical data changing for
-                        updating search results synchronously.It also obtains data from wikipedia api to make entry points
-                        For these results.  
+                        updating search results synchronously.
                     </p>
                 </div>
             </div>
+            <div class="changeBtn">
+                <a id="prev">
+                    <div class="arrow"></div>
+                 </a>
+                 <a id="next">
+                     <div class="arrow arrow2"></div>
+                 </a>
+            </div>
         </div>
     </div>
+    <div class="snap contact" style="top:1200vh"id='section6'>
+        <p class="title">Contact</p>
+        <div class="contact-message">
+            <p>I'm currently looking for new opportunties.
+            </p>
+            <p>If you are interested, please contact <a href="mailto:why7121@gmail.com">why7121@gmail.com</a>
+            </p>
+        </div>
+    </div>
+    <footer>
+        <a href="about.html">About</a>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
