update home section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="home snap" id='section1'style = 'position:fixed; z-index:-1;' >
+        <div class="overlay"></div>
         <div class="text">Haiyun Wang</div>
         <video autoplay muted loop  class="snap video">
-            <source src="videos/videoBackground.mp4" type="video/mp4">
+            <source src="videos/video.mp4" type="video/mp4">
         </video> 
     </div>
     <div class="snap aboutInfo" style="top:100vh;"id='section2'>
