back to original

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="home snap" id='section1'style = 'position:fixed; z-index:-1;' >
         <div class="overlay"></div>
         <div class="text">Haiyun Wang</div>
-        <video autoplay muted loop  src="videos/video.mp4" controls class="snap video" poster="images/poster.png">
-            <!-- <source src="videos/video.mp4" type="video/mp4"> -->
+        <video autoplay muted loop class="snap video" poster="images/poster.png">
+            <source src="videos/video.mp4" type="video/mp4">
         </video> 
     </div>
     <div class="snap aboutInfo" style="top:100vh;"id='section2'>
