try webm video instead of originial

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="overlay"></div>
         <div class="text">Haiyun Wang</div>
         <video autoplay muted loop class="snap video" poster="images/poster.png">
-            <source src="videos/video.mp4" type="video/mp4">
+            <source src="video (6).webm" type="video/webm">
         </video> 
     </div>
     <div class="snap aboutInfo" style="top:100vh;"id='section2'>
