--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <div class="snap aboutInfo" style="top:100vh;"id='section2'>
         <div class="details">
-            <img class = 'photo'src="./images/Profilephoto.jpg" alt="profile photo" id='profileImg'>
-            <pre class="introduction" style="opacity: 0;" id='intro'>
+            <img class = 'photo'src="./images/Profilephoto.jpg" alt="profile photo" id='profileImg' style="opacity: 0.1;">
+            <pre class="introduction" style="opacity: 0; " id='intro'>
                 I'm Haiyun Wang,
                 A self-taught developer,
                 coming from art background. 
