--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href="app.css">
     <title>Haiyun Wang</title>
 </head>
-<body>
+<body style=" -webkit-overflow-scrolling: touch;">
     <div class="home snap" id='section1'style = 'position:fixed; z-index:-1;' >
         <div class="overlay"></div>
         <div class="text">Haiyun Wang</div>
