--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="home snap" id='section1'style = 'position:fixed; z-index:-1;' >
         <div class="overlay"></div>
         <div class="text">Haiyun Wang</div>
-        <video allowfullscreen="true" muted="muted" autoplay="autoplay" playsinline="playsinline" loop="loop" class="snap video" poster="images/poster.png">
+        <video allowfullscreen="true" muted="muted" autoplay="autoplay" playsinline="playsinline" loop="loop" class="snap video" poster="images/poster.png" controlsList="nodownload" preload="none">
             <source src="./videos/video.mp4" type="video/mp4">
         </video> 
     </div>
