add loading animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Haiyun Wang</title>
 </head>
 <body>
+    <div class="preload">
+        <div class="cube">
+            <div class=" side topSide"></div>
+            <div class="side leftSide"></div>
+            <div class="side front"></div>
+        </div>
+    </div>
     <div class="home snap" id='section1'style = 'position:fixed; z-index:-1;' >
         <div class="overlay"></div>
         <div class="text">Haiyun Wang</div>
