--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     <div class="snap project-container"style='top:1300vh;' id='section5'>
         <div class="card-container">
             <div class="card" id='card1'>
-                <a href="https://redesignwebsite.netlify.app">
+                <a href="https://youtubelike.netlify.app/">
                     <img class="projectImg" src="./images/redesign.png" alt="redesign website">
                 </a>   
                 <div class="projectInfo-container">
                     <p class="projectInfo">
-                        Based on Youtube original design, I built this application  in 
-                        vanilla javascript, it manipulates different states of html elements.                        
+                        This website mimics Youtube’s looks and behaviors on screens with different sizes.
+                        It contains a home page and a video page. It has toggleable side navigation on both pages.                         
                     </p>
                 </div>
             </div>
@@ -83,9 +83,8 @@
                 </a>   
                 <div class="projectInfo-container">
                     <p class="projectInfo">
-                        The application established a dynamic
-                        search bar in vue.js, it implements dynamical data changing for
-                        updating search results synchronously.
+                        This web application was a front-end project allowing users to search and view Wikipedia articles.
+                        There is  a button for  viewing random articles, an animated search bar and a gradient background.  
                     </p>
                 </div>
             </div>
