--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <img class = 'photo'src="./images/Profilephoto.jpg" alt="profile photo" id='profileImg' style="opacity: 10;">
             <pre class="introduction" style="opacity: 0; " id='intro'>
                 I'm Haiyun Wang,
-                A self-taught developer,
+                A self-taught
+                developer,
                 coming from art background. 
-                I love creating interesting applications.
+                I love creating interesting
+                applications.
             </pre>
         </div>
     </div>
