--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 A self-taught
                 developer,
                 coming from art background. 
-                I love creating interesting
+                I love creating
+                interesting
                 applications.
             </pre>
         </div>
